Agora a api devolve um arry de objetos ao inves de um array de array de strings

--- a/styles/caixaCodigo.css
+++ b/styles/caixaCodigo.css
@@ -3,9 +3,9 @@
 
     width: 100%;
 
-    background-color: black;
+    background-color: #00000f;
 
-    color: green;
+    color: white;
 
     border-radius: 4px;
 
