--- a/styles/caixaCodigo.css
+++ b/styles/caixaCodigo.css
@@ -1,3 +1,12 @@
+#onde-imbui-elemento{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+
 .caixa-codigo{
 
 
@@ -112,5 +121,28 @@
 hr{
 
     border-color: #464d70;
+    width: 100%;
+    
+    margin-top: 5%;
+    margin-bottom: 3%   ;
+
+}
+
+
+
+.button-carrega-mais {
+
+    background-color: aqua;
+    border: 0;
+    border-radius: 15px;
+
+    width: 25%;
+
+    text-transform: uppercase;
+
+    padding-top: 1%;
+    padding-bottom: 1%;
+
+    
 
 }
