Terminada o resumo da parte teorica do merge sort

--- a/styles/caixaCodigo.css
+++ b/styles/caixaCodigo.css
@@ -26,10 +26,15 @@
     
 }
 
+code{
+
+    text-transform: none;
+
+}
+
 .caixa-codigo > pre{
-
+    
     padding: 2%;
-
     
 
 }
@@ -55,7 +60,7 @@
 #onde-imbui-elemento{
 
     width: 100%;
-
+    
 }
 
 
