--- a/styles/caixaCodigo.css
+++ b/styles/caixaCodigo.css
@@ -12,7 +12,7 @@
 
     width: 100%;
 
-    background-color: #464d70;
+    background-color: #00000f;
 
     color: white;
 
@@ -41,7 +41,7 @@ pre :only-child{
 
 .borda{
 
-    background-color: grey;
+    background-color: #8f8f8f;
 
     width: 100%;
 
